# CrossPP

./: .gitignore  CMakeLists.txt  EntityAI.h  GamemodeID.h  IItemComparable.cpp  IItemComparable.h  MedievalSurvival.rc  MedievalSurvival.sln  MoleculeUniverse.vcxproj  MoleculeUniverse.vcxproj.filters  NatvisFile.natvis  README.md  README.txt  accountEditor.cpp  accountEditor.h  additiveDrop.h  ageData.cpp  ageData.h  alternativeDropCondition.h  alternativesDrop.cpp  amountDistribution.h  angerAI.cpp  animatedParticleData.h  anvilSlotContainer.cpp  anvilSlotContainer.h  armorType.h  arrayDataType.h  arrow.cpp  arrow.h  attachedBlockData.cpp  attachedBlockData.h  attachedData.cpp  attachmentDirectionData.cpp  attachmentID.h  attackOnCollideAI.h  audioCollection.h  avoidEntityAI.cpp  badlands.cpp  bambooData.h  basaltDeltas.cpp  (+418 more)
.github/workflows/: cmake-multi-platform.yml
Android/: gradle.properties  settings.gradle.kts
Android/app/: build.gradle.kts
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Installer/: installer.nsi
data/: .gitignore  ascii.xcf
data/datapacks/randomized loot/: pack.mcmeta
data/resourcepacks/4thful/: pack.mcmeta
data/resourcepacks/creator pack/: README.txt  pack.mcmeta
data/resourcepacks/happy 1.16/: pack.mcmeta
data/structures/end_city/: gentle_stairs_connection.json
data/structures/fossil/: small.json
data/structures/nether_fortress/: bridge_ending.json  part.json
data/structures/stronghold/: connects_to_stairs.json
gzip/zlib-1.2.11/zlib-1.2.11/: gzlib.c
include/: GlobalFunctions.h
include/application/: application.cpp  cursorhandling.h  interaction.cpp  interaction.h  mouseButton.h
include/application/control/: TextBox.cpp  TextBox.h  button.h  checkbox.h  colorpicker.cpp  colorpicker.h  control.cpp  control.h  form.cpp  form.h  listcontrol.cpp  listcontrol.h  picturebox.cpp  picturebox.h
include/array/: arrayfunctions.h  arraynd.h  fastarray.h  wstring.cpp
include/compiler/: area.cpp  area.h  function.h  memorymanagement.cpp
include/filesystem/: fileio.h  filemanager.h  iserializable.h  iserializer.h  jsonReader.cpp  jsonReader.h  serializer.h  textfile.h
include/filesystem/file/: fastStream.cpp  tcpSerializer.h
include/interface/: idestructable.cpp  idestructable.h  inamable.h
include/math/: LayerNoiseSimplex.cpp  SimplexNoise.cpp  SimplexNoise.h  bodypart2d.cpp  collisions.cpp  endlessPrecision.h  font.h  intersectable.cpp  intersectable.h  intersectablecuboid.h  intersection.h  keyframe.cpp  mattnxn.h  meshConstants.h  meshfunctions.h  octreenode.h  ray.h  raycastIterator.h  rectangletn.h  swingsynchronizer.cpp  theme.h  tile.h  timemath.cpp  timemath.h  treenodeiterator.h  triangle.h  uuid.h  vectn.h  vectorrandom.h
include/math/graphics/: font.cpp  fontfamily.cpp  fontfamily.h  frustum.h  resolutiontexture.cpp  resolutiontexture.h  texture.h  textures.h
include/math/neuralnetwork/: aiblueprint.h  aiinputdata.h  fastlayer.cpp  fastlayer.h  neuralnetwork.cpp
include/math/random/: random.h  shufflerandom.h
include/network/: compressedPacket.h
include/optimization/: benchmark.h  macrotricks.h  optimization.h
lib/: CMakeLists.txt
lib/sfml/: CMakeLists.txt
src/: Chunk.h  EntityAI.h  IItemComparable.cpp  IItemComparable.h  accountEditor.cpp  accountEditor.h  additiveDrop.cpp  ageData.cpp  alternativeDropCondition.cpp  alternativesDrop.h  amountDistribution.cpp  amountDistribution.h  amountDrop.cpp  amountDrop.h  angerAI.cpp  angerAI.h  animatedParticleData.cpp  animatedParticleData.h  anvilSlotContainer.cpp  armorTier.h  arrow.cpp  arrow.h  arrowAttackAI.cpp  arrowAttackAI.h  attachedBlockData.cpp  attachedBlockPollenData.h  attachedCropData.h  attachedData.cpp  attachedData.h  attachmentDirectionData.cpp  attachmentDirectionData.h  attackOnCollideAI.cpp  audioCollection.h  avoidEntityAI.h  badLands.cpp  badLands.h  badlands.cpp  bambooData.cpp  basaltDeltas.cpp  basaltDeltas.h  (+552 more)
src/constants/: vectorConstants.h
src/gzip/: compress.hpp
src/include/: GlobalFunctions.h  globalFunctions.h  windowsIncluder.h
src/include/application/: application.cpp  application.h  cursorhandling.h  initialize.cpp  initialize.h  interaction.cpp  interaction.h  mouseButton.h  theme.h
src/include/array/: arrayfunctions.h  arraynd.h  fastarray.h  fastlist.h  rectiteratortn.h  skiplist.h  tileList.h  wstring.cpp  wstring.h  wstringFunctions.cpp  wstringFunctions.h  zipiterator.h
src/include/compiler/: area.cpp  compiler.cpp  compiler.h  errors.cpp  errors.h  function.h  memorymanagement.h  operators.h  standardarea.h
src/include/event/: eventargs.h  eventhandler.h
src/include/filesystem/: fileFunctions.h  fileio.h  filemanager.h  iserializable.cpp  iserializable.h  iserializer.h  jsonReader.cpp  jsonReader.h  serialization.h  serializer.h  sfmlInputStream.h  textfile.h
src/include/interface/: idestructable.h  inamable.h
src/include/math/: LayerNoiseSimplex.cpp  LayerNoiseSimplex.h  MarchingCubes.h  SimplexNoise.cpp  SimplexNoise.h  axis.h  bigNumber.h  bodypart2d.cpp  bodypart2d.h  collisions.cpp  collisions.h  coordinatesystem.h  cropline.h  direction.h  endlessPrecision.h  frustum.cpp  hashing.h  intersectableCuboid.h  intersectablecuboid.cpp  intersection.h  keyframe.h  mathFunctions.h  mathfunctions.h  matt3x3.h  mattnxn.h  meshConstants.h  meshfunctions.cpp  meshfunctions.h  octreenode.h  physics.h  ray.h  raycast.h  raycastIterator.h  rectangletn.h  standardarea.cpp  swingsynchronizer.cpp  swingsynchronizer.h  theme.h  timemath.cpp  timemath.h  (+5 more)
src/include/network/: compressedPacket.h
src/include/optimization/: benchmark.h  debug.h  handleError.cpp  handleError.h  macrotricks.h  optimization.h  stableTickLoop.h
src/include/sound/: audio2d.cpp  audio2d.h  music2d.cpp  music2d.h  sound2d.cpp  sound2d.h  soundHandler2D.cpp  soundHandler2D.h
src/serializer/: serializeColor.h  serializeDirection.h  serializeList.h  serializeRectangle.h  serializeUUID.h
tutorial/: README.txt  adding a biome.txt  adding a block.txt  commands.txt  update openAL.txt
(+266 files in other folders)
