message(STATUS "Fetching SFML...")
#set(SFML_BUILD_AUDIO FALSE)
#set(SFML_BUILD_NETWORK FALSE)
if(SFML_STATIC_LIBRARIES)
    set(BUILD_SHARED_LIBS OFF)
endif()
FetchContent_MakeAvailable(sfml)
if(NOT sfml_POPULATED)
    FetchContent_Populate(sfml)
    add_subdirectory(${sfml_SOURCE_DIR} ${sfml_BINARY_DIR})
endif()